# pplt

./: .envrc  .gitignore  README.md  alt-data.yml  constraints.txt  data.yml  foo.md  pyproject.toml  requirements.txt
.cspell/: custom-dictionary-workspace.txt
pplt/: __init__.py  account.py  currency.py  date.py  dates.py  decorators.py  events.py  interest.py  irs_tables.py  period.py  plot.py  rich_tables.py  schedule.py  table.py  time.py  timeline.py  transaction.py  utils.py
pplt/data/: IRS-rates-2024.csv
src/pplt/: __init__.py  account.py  currency.py  data.yml  data_tables.py  dates.py  decorators.py  events.py  exchange.py  interest_utils.py  loader.py  period.py  plot.py  quicken.py  rich_tables.py  schedule.py  timeline_series.py  transaction.py  utils.py
test/: conftest.py  test_date.py  test_decorators.py  test_interest.py  test_interest_utils.py  test_load_data.py  test_schedule.py  test_table.py  test_time.py  test_timeline.py  test_utils.py
typings/plotext/: _date.pyi  _doc_utils.pyi  _utility.pyi
