
[tool.poetry]
name = "pplt"
version = "0.0.6"
description = "Demo."
authors = ["Bob Kerns <1154903+BobKerns@users.noreply.github.com>"]

license = "MIT"
readme = "README.md"

repository = "https://kabocha.4kows.com/pplt.git"
keywords = ['finance', 'plotting', 'retirement']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]

packages = [{ include = "pplt" }]

[tool.poetry.urls]

Homepage = "https://github.com/BobKerns/xontrib-xgit"
Documentation = "https://github.com/BobKerns/xontrib-xgit/blob/master/README.md"
Code = "https://github.com/BobKerns/xontrib-xgit"
"Issue tracker" = "https://github.com/BobKerns/xontrib-xgit/issues"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
plotext = ">=5.3.2"
pyyaml = ">=6.0.2"

[tool.poetry.dev-dependencies]
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.mypy]


[tool.ruff]
lint.select = [
    "E",
    "F",
    "B", # flake8-bugbear
    #"I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
