[project]
name = "pplt"
version = "0.1.0"
description = "Demo."
authors = [
    {name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com"}
]

license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml >= 6.0.2",
    "plotext >= 5.3.2",
    "pytest >= 8.3.4",
    "pytest-cov >= 6.0.0",
    "textual >= 1.0.0",
    "rich >= 13.9.4",
    "textual-plotext >= 1.0.1",
    "httpx >= 0.28.1",
    "textual-dev >= 1.7.0",
]
